# mcp-overlay

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  run.sh
garvis/: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  run-all.sh
garvis/server/: README.md  config.py  env.example  main.py  pyproject.toml
garvis/server/api/: __init__.py  health.py
garvis/server/tools/: __init__.py  mcp_bridge.py  mcp_client.py  mcp_tools.py
garvis/server/tools/vision/: __init__.py  detect.py  face_detect.py
garvis/server/voice/: __init__.py  claude_llm.py  deepgram_stt.py  elevenlabs_tts.py  pipeline.py  websocket.py
garvis/xr-client/: README.md  index.html  package-lock.json  package.json  vite.config.ts
garvis/xr-client/src/: App.tsx
manim-mcp/: .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT_READY.md  TODO.md  presentation.html  presentation.md  start-app.sh
manim-mcp/.cursor/: mcp.json
manim-mcp/.cursor/commands/: init.md
manim-mcp/docs/: AWS_CLI_COMMANDS.md  AWS_DEPLOYMENT_PLAN.md  DEPLOYMENT_SUMMARY.md  ENVIRONMENT_VARIABLES.md  MONITORING_AND_LOGGING.md  QUICK_START.md  VIDEO_RENDERING.md
manim-mcp/server/: .dockerignore  .gitignore  Dockerfile  database_schema.sql  pyproject.toml  run-server.sh  server.py
manim-mcp/server/apps/: lesson_viewer.py
manim-mcp/server/archive/: server_legacy.py
manim-mcp/server/core/: __init__.py  auth.py  code_generation.py  exceptions.py  expression_parser.py  renderer.py  s3_storage.py  validate_inputs.py
manim-mcp/server/docs/: ALGEBRA_TOOLS.md  ARCHITECTURE.md
manim-mcp/server/docs/database/: ARCHITECTURE_DIAGRAM.md  CACHING_README.md  DATABASE_SCHEMA_DIAGRAM.md  cache_manager.py  example_cache_usage.py
manim-mcp/server/tools/: __init__.py  base.py  utilities.py
manim-mcp/server/tools/algebra/: compare_2d.py  plot_2d.py  transformation_2d.py
manim-mcp/server/tools/three_d/: compare_3d.py  plot_3d.py  transformation_3d.py
manim-mcp/web-client/: .env.local.example  config.json  demo-prompts.txt  package-lock.json  package.json
mcp-app-sandbox/: AGENTS.md  CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
mcp-app-sandbox/citibike/: main.ts  mcp-app.html  package-lock.json  package.json  server.ts  tsconfig.json  tsconfig.server.json  tsconfig.tsbuildinfo
mcp-app-sandbox/crackstreams/: config.py  main.py  proxy.py  pyproject.toml
mcp-app-sandbox/crackstreams/providers/: __init__.py  base.py  crackstreams.py  registry.py
mcp-app-sandbox/crackstreams/streaming/: __init__.py  helpers.py
mcp-app-sandbox/mta-subway/: dashboard-app.html  main.ts  mcp-app.html  package-lock.json  package.json  server.ts  tsconfig.json  tsconfig.server.json
mcp-app-sandbox/public/: sandbox_proxy.html
mcp-app-sandbox/server/: api.ts
mcp-app-sandbox/src/: App.tsx  Chat.tsx  app.css  chat-types.ts  mcp.ts
splat-server/: CLAUDE.md  config.py  inference.py  pyproject.toml  server.py  setup.sh
vision-explorer2/: .gitignore  AGENTS.md  CLAUDE.md  plan.md
vision-explorer2/backend/: config.py  main.py  models.py  requirements.txt  vision_llm.py
vision-explorer2/docs/: design-doc.md
vision-explorer2/frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
vision-research-server/: AGENTS.md  config.py  detect.py  pyproject.toml  server.py  vision_llm.py
wiki/: Architecture-Overview.md  Garvis.md  Getting-Started.md  Home.md  MCP-App-Sandbox.md  MCP-Integration-Patterns.md  Manim-MCP.md  Vision-Servers.md  Voice-Pipeline.md  WebXR-Rendering.md  XR-MCP-App.md
xr-mcp-app/: AGENTS.md  index.html  package-lock.json  package.json  vite.config.ts
xr-mcp-app/src/: App.tsx  MCPAppPanel.css  MCPAppPanel.tsx  design-system.ts  main.tsx  mcp.ts
(+141 files in other folders)
