[project]
name = "crackstreams-mcp"
version = "0.1.0"
description = "CrackStreams MCP server for live sports streaming"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "fastmcp>=2.13.1",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
serve = "uvicorn main:app --host 0.0.0.0 --port 3003 --reload"
